1999-04-20  Paul Eggert  <eggert@twinsun.com>

	* m4/lfs.m4: Port to AIX and HP-UX.  Support cross-compilation.

1999-04-18  Jim Meyering  <meyering@ascend.com>

	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): New file/macro.
	* jm-macros.m4: Use it.

1999-04-06  Jim Meyering  <meyering@ascend.com>

	* strftime.m4: Remove test for %f.

1999-03-29  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4 (jm_CHECK_ALL_TYPES): New macro, contains the
	superset of the AC_TYPE_* checks in the textutils, fileutils,
	and sh-utils, plus AC_TYPE_PID_T.  Paul Eggert suggested adding
	AC_TYPE_PID_T.

1999-03-28  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Define GNU_PACKAGE here.
	Be sure to AC_SUBST it, once again, so that @GNU_PACKAGE@ is
	replaced e.g., in the *.sh files of the sh-utils.

1999-03-20  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: s/jm_WITH_REGEX/jm_INCLUDED_REGEX/.
	* regex.m4 (jm_INCLUDED_REGEX): Rename from jm_WITH_REGEX.
	Don't depend on AM_GLIBC.  Suggestions from Alain Magloire.

1999-03-19  Jim Meyering  <meyering@ascend.com>

	* jm-winsz1.m4 (jm_WINSIZE_IN_PTEM): New macro.

1999-03-12  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Use AC_FUNC_SETVBUF_REVERSED.

1999-03-07  Jim Meyering  <meyering@ascend.com>

	* jm-glibc-io.m4: Use only those *_unlocked macros that are declared.

1999-02-17  Jim Meyering  <meyering@ascend.com>

	* gettext.m4 (AM_GNU_GETTEXT): Do `changequote' around use of brackets
	in macro definition.  From Eli Zaretskii and Alain Magloire.

1999-02-07  Jim Meyering  <meyering@ascend.com>

	* group-member.m4: New file -- extracted from sh-utils' configure.in.

	1999-02-05  Eli Zaretskii  <eliz@is.elta.co.il>
	* m4/gettext.m4: Support DOS-style d:/foo/bar absolute file names.

1999-02-06  Jim Meyering  <meyering@ascend.com>

	* chown.m4: Use `AC_SUBST(LIBOBJS)' since we set LIBOBJS.
	* fnmatch.m4: Likewise.
	* getgroups.m4: Likewise.
	* lstat.m4: Likewise.
	* malloc.m4: Likewise.
	* putenv.m4: Likewise.